[package]
name = "odyssey-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "*"
async-session-types = "*"
bitvec = "*"
bytes = "*"
daggy = {version="*", features=["stable_dag"]}
dynamic = "*"
futures = "*"
lazy_static = "*"
log = "*"
odyssey-crdt = {path="../odyssey-crdt"}
rand = "*"
serde = {version="*", features=["derive"]}
serde_cbor = {version="*", features=[]}
sha2 = "*"
tokio = {version="*", features=["io-util","rt","rt-multi-thread","net"]}
tokio-tower = "*"
tokio-util = {version="*", features=["codec"]}
tokio-serde = {version="*", features=["cbor"]}
tower-service = "*"
typeable = {path="../typeable"}

[dev-dependencies]
petgraph = "*"
