[package]
name = "ossa-core"
version = "0.0.1"
edition = "2021"
license = "MPL-2.0"
description = "Rust implementation of the Ossa Protocol."
homepage = "https://github.com/jprider63/ossa"
repository = "https://github.com/jprider63/ossa"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.1.1"
async-session-types = "0.1.2"
bitvec = {version="1.0.1", features = ["serde"]}
bs58 = "0.5.1"
bytes = "1.10.1"
ed25519-dalek = {version="2.2.0", features = ["rand_core", "serde"]}
daggy = {version="0.9.0", features=["stable_dag"]}
futures = "0.3.31"
hex = "0.4.3"
itertools = "0.14.0"
ossa-crdt = {version="0.0.1", path="../ossa-crdt"}
rand = "0.9.2"
rand_core = {version="^0.6.4", features=["std"]}
replace_with = "0.1.8"
serde = {version="1.0.219", features=["derive"]}
serde_cbor = {version="0.11.2", features=[]}
sha2 = "0.10.9"
tokio = {version="1.43.0", features=["io-util","rt","rt-multi-thread","net"]}
tokio-util = {version="0.7.15", features=["codec"]}
tokio-stream = "0.1.17"
tracing = "0.1.41"
ossa-typeable = {version="0.0.1", path="../ossa-typeable", features=["serde"]}

[dev-dependencies]
petgraph = "0.8.2"
