[package]
name = "ossa-dioxus"
version = "0.0.1-alpha.1"
edition = "2024"
license = "MPL-2.0"
description = "Dioxus integration for the Ossa Protocol implementation, `ossa-core`."
homepage = "https://github.com/jprider63/ossa"
repository = "https://github.com/jprider63/ossa"

[dependencies]
dioxus = {git = "https://github.com/jprider63/dioxus.git", rev="cd3ff6d3644347163c249da8293a76db02044d03"}
dioxus-desktop = {git = "https://github.com/jprider63/dioxus.git", rev="cd3ff6d3644347163c249da8293a76db02044d03"}
# ossa-core = {path="../ossa-core"}
ossa-core = "*"
# ossa-crdt = {path="../ossa-crdt"}
ossa-crdt = "*"
tracing = "*"

