[package]
name = "ossa-dioxus"
version = "0.0.1"
edition = "2024"
license = "MPL-2.0"
description = "Dioxus integration for the Ossa Protocol implementation, `ossa-core`."
homepage = "https://github.com/jprider63/ossa"
repository = "https://github.com/jprider63/ossa"

[dependencies]
dioxus = {version = "0.6.0"}
dioxus-desktop = {version = "0.6.0"}
ossa-core = {version="0.0.1", path="../ossa-core"}
ossa-crdt = {version="0.0.1", path="../ossa-crdt"}
tracing = "0.1.41"

