[package]
name = "ossa-typeable-derive"
version = "0.0.1"
edition = "2021"
license = "MPL-2.0"
description = "Macros to derive unique identifiers for types."
homepage = "https://github.com/jprider63/ossa"
repository = "https://github.com/jprider63/ossa"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["extra-traits"] }
proc-macro2 = "*"
quote = "*"
