[package]
name = "ossa-typeable"
version = "0.0.1"
edition = "2021"
license = "MPL-2.0"
description = "Unique identifiers for types."
homepage = "https://github.com/jprider63/ossa"
repository = "https://github.com/jprider63/ossa"

[features]
im = ["dep:im"]
serde = ["dep:serde"]

[dependencies]
lazy_static = "1.5.0"
im = {version = "15.1.0", optional = true}
serde = {version = "1.0.219", optional = true}
sha2 = "0.10.9"
ossa-typeable-derive = {version="0.0.1", path = "../ossa-typeable-derive"}
